serialized client server talk
