# backend/src/character_sheet/routes.py
@@ -5,23 +5,24 @@ from starlette.websockets import WebSocket
 
 import src.character_sheet.models.character_sheet as model
 
+MAIN_TAG = "character_sheet"
 router = APIRouter(
-    prefix="/character_sheet"
+    prefix="/character_sheet",
+    tags=[MAIN_TAG]
 )
 
-MAIN_TAG = "character_sheet"
 
-# @router.get("/{sheet_id}")
-# async def read_item(sheet_id: int):
-#     return {"sheet_id": sheet_id}
-#
+@router.get("/{sheet_id}")
+def get_sheet(sheet_id: int):
+    return model.CharacterSheetDao.get(sheet_id)
 
-@router.get("/character_sheets", tags=[MAIN_TAG])
+
+@router.get("/character_sheets")
 def get_sheets() -> List[model.CharacterSheet]:
     return model.CharacterSheetDao.get_list()
 
 
-@router.post("/create_sheet", tags=[MAIN_TAG])
+@router.post("/create_sheet")
 def create_sheet(char_sheet: model.CharacterSheetPostSchema = model.CharacterSheetPostSchema()) -> model.CharacterSheet:
     """
     Creates a new empty character sheet. Can be optionally set with starting values from the CharacterSheetPostSchema.
@@ -29,6 +30,7 @@ def create_sheet(char_sheet: model.CharacterSheetPostSchema = model.CharacterShe
     :return: values of a newly created character sheet.
     """
     return model.CharacterSheetDao.create(char_sheet)
+
 
 @router.websocket("/socket")
 async def websocket_endpoint(websocket: WebSocket):
